# rustworker

./: Cargo.toml  README.md  build.sh  wrangler.toml
src/: lib.rs  worker.rs
